--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "new-seed": "npx sequelize-cli seed:generate --name demo-user",
+    "run-seed": "npx sequelize-cli db:seed:all",
+    "revert-all-seed": "npx sequelize-cli db:seed:undo:all",
+    "revet-last-seed": "npx sequelize-cli db:seed:undo"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
