--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "resend": "^4.1.2",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   },
