--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "iblf-gerenciador-orcamento",
   "version": "0.0.0",
   "private": true,
+  "engines" : { 
+    "npm" : ">=10.9.2",
+    "node" : ">=22.13.1"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
