--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,26 @@
 {
   "development": {
-    "dialect": "sqlite",
-    "storage": "./databases/database.sqlite"
+    "dialect": "mysql",
+    "host": "localhost",
+    "username": "root",
+    "password": "example",
+    "database": "iblf",
+    "port": 3306
   },
   "test": {
-    "dialect": "sqlite",
-    "storage": "./databases/database_test.sqlite"
+    "dialect": "mysql",
+    "host": "localhost",
+    "username": "root",
+    "password": "example",
+    "database": "iblf",
+    "port": 3306
   },
   "production": {
-    "dialect": "sqlite",
-    "storage": "./databases/database_production.sqlite"
+    "dialect": "mysql",
+    "host": "10.0.0.51",
+    "username": "root",
+    "password": "c5JlX}58lpbW",
+    "database": "iblf",
+    "port": 3306
   }
 }
