--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.2",
     "resend": "^4.1.2",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
